src/kube_manifests/cacheclient-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-client-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cache-client
  template:
    metadata:
      labels:
        app: cache-client
    spec:
      containers:
      - name: cache-client-service
        image: razen46/data_management:latest
        resources:
          limits:
            memory: "512Mi"
            cpu: "200m"
          requests:
            memory: "256Mi"
            cpu: "150m"
        ports:
        - containerPort: 5000
