src/kube_manifests/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis-service
        image: redis
        resources:
          limits:
            memory: "768Mi"
            cpu: "750m"
          requests:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 6379
      volumes:
        - name: redis-data
          emptyDir:
            {}
        - name: config
          configMap:
            name: redis-config
            items:
              - key: redis-config
                path: redis.conf
