src/kube_manifests/cacheclient-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cacheclient-service
spec:
  type: LoadBalancer
  selector:
    app: cache-client
  ports:
    - port: 8080
      targetPort: 5000
