src/kube_manifests/kafka-controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service-razenkov
spec:
  type: LoadBalancer
  selector:
    app: kafka-controller-razenkov
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
