src/kube_manifests/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: 51.250.19.168
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: <Service>
            port:
              number: <Port>

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: data-management-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    name: data-management-ingress
spec:
  rules:
  - host: datamanagement.lambda-it.ru
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /razenkov/api/v1/consume
        backend:
          service:
            name: kafka-service-razenkov
            port:
              number: 80
